fix 38 SonarQube code smells across M4 refactoring and SmoteFilter
- ClassSelector/SizeFilter/NsmellsService: return/param types widened to Map
- ClassSelectionOrchestrator: isInfoEnabled guard, unnamed catch variable
- SmoteFilter: field rename (drop m_ prefix), @Override on all overrides,
  Vector→ArrayList, System.err→logger, isEmpty, Double.parseDouble, lambda
  comparator, merged nested if, specific exceptions, doSMOTE refactored into
  10 helper methods (cognitive complexity 110→<8 per method)